There is a screen width where the metric and state menus do not display and neither does the arrow (maybe there is a screensize that isn’t covered when switching side menu?)  fix that

--- a/MHTCDashboard/src/main/webapp/css/style-responsive.css
+++ b/MHTCDashboard/src/main/webapp/css/style-responsive.css
@@ -71,7 +71,7 @@
 
 }
 
-@media only screen and (min-width: 830px){
+@media only screen and (min-width: 831px){
 	#states-trigger-wrapper
 	{
 		display: none;
